Added styles, description to html

--- a/server/static/404.html
+++ b/server/static/404.html
@@ -5,9 +5,15 @@
     <meta charset="utf-8">
     <title>Timestampr | 404</title>
 </head>
+<style>
+    h3 {
+        text-align: center;
+        color: red;
+    }
+</style>
 
 <body>
-    <h1>Invalid address. Page not found.</h1>
+    <h3>Invalid address. Page not found.</h1>
 </body>
 
 </html>
