--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,22 +4,49 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" href="styles.css">
     <title>Timestampr</title>
 </head>
+<style>
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h1 {
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        color: blue;
+        text-align: center;
+    }
+
+    p {
+        font-size: 1.1em;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .exampleUsage {
+        background: bisque;
+        padding: 10px;
+    }
+</style>
 
 <body>
-    <div class="containerGrid">
+    <div class="container">
         <div class="description">
             <h1>Timestamp microservice API</h1>
             <p>A simple api which parses unix timestamps and natural language dates</p>
         </div>
         <div class="exampleUsage">
             <div>
-                <p>Example usage:
-                    <a href='' target="_blank"></a>
+                <p>Example usage with date:
+                    <span> https://time-stampr.herokuapp.com/api/January%201%202018</span>
+                    <a href='https://time-stampr.herokuapp.com/api/January%201%202018' target="_blank">Go!</a>
                 </p>
-                <p>Example usage:
-                    <a href='' target="_blank"></a>
+                <p>Example usage with unix time stamp:
+                    <span>https://time-stampr.herokuapp.com/api/1514764800</span>
+                    <a href='https://time-stampr.herokuapp.com/api/1514764800' target="_blank">Go!</a>
                 </p>
             </div>
         </div>
